Add password visibility toggle feature to login and team edit forms (Resolves #9)

--- a/static/style.css
+++ b/static/style.css
@@ -14,3 +14,11 @@ label.required:after {
   content: "*";
   color: red;
 }
+
+.input-group .toggle-password {
+    cursor: pointer;
+}
+
+.input-group .toggle-password i {
+    font-size: 1.2rem;
+}
