--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <script src="{{ url_for('static', filename='togglePassword.js') }}"></script>
 
     <title>TMM webinfo – {{ current_puzzlehunt_name }}</title>
 </head>
