--- a/templates/team_edit.html
+++ b/templates/team_edit.html
@@ -19,7 +19,12 @@
         <div class="row mb-3">
             <label for="password" class="col-3 col-form-label {{ "required" if not team }}">Heslo</label>
             <div class="col-9">
-                <input type="password" class="form-control" id="password" name="password" {{ "required" if not team }} placeholder="{{ "Nechte prázdné pro zachování současného hesla." if team }}">
+                <div class="input-group">
+                    <input type="password" class="form-control" id="password" name="password" {{ "required" if not team }} placeholder="{{ "Nechte prázdné pro zachování současného hesla." if team }}">
+                    <button type="button" class="btn btn-outline-secondary toggle-password" data-target="#password" onclick="togglePasswordVisibility(this)">
+                        <i class="bi bi-eye"></i>
+                    </button>
+                </div>
             </div>
         </div>
         <div class="row mb-3">
