--- a/templates/progress_table.html
+++ b/templates/progress_table.html
@@ -121,4 +121,8 @@
             }
         });
     </script>
+
+    <div class="mt-4">
+        <a href="/code_lookup" class="btn btn-primary">Vyhledávání týmů podle kódu</a>
+    </div>
 {% endblock content_admin %}
